# simple-chat

./: CMakeLists.txt  Makefile  README.md  assignment2_ui.pro  chatbubble.cpp  chatbubble.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  chatwindow_simple.cpp  chatwindow_simple.h  chatwindow_simple.ui  chatwindow_ui.cpp  chatwindow_ui.h  main.cpp  main_modern.cpp  main_simple.cpp  main_ui.cpp  moc_chatbubble.cpp  moc_chatwindow.cpp  moc_chatwindow_simple.cpp  moc_chatwindow_ui.cpp  moc_modernChat.cpp  modernChat.cpp  modernChat.h  modern_chat.pro  ui_chatwindow.h  ui_chatwindow_simple.h
NetworkChat_UI.app/Contents/: Info.plist
NetworkChat_UI.app/Contents/MacOS/: NetworkChat_UI
